/* དགོངས་པ་རྫོགས་པའི་སྐོར། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -287,6 +287,25 @@
 ==== དགོངས་པ་རྫོགས་པའི་སྐོར། ==== 
 <big>སྡེ་སྲིད་ཁོ་གིས་སྦྱིན་བདག་མཛད་ཐོག་ལས་ བཀའ་འགྱུར་གྱི་ལུང་གནང་ཡོད་པའི་སྐབས་ལུ་ སྡེ་སྲིད་མཆོག་གི་སྐུ་གཟུགས་ལུ་ བསྙུང་གཞི་བཞེས་ཏེ་ སྨན་བཅོས་དང་རིམ་གྲོ་ག་དེམ་ཅིག་འབད་རུང་ ཕན་མ་ཚུགསཔ་ལས་ སྡེ་སྲིད་ལས་དགོངས་ཞུ་མཛད་ཡོདཔ་དང་ ཁོ་གི་ཚབ་ལུ་ སྡེ་སྲིད་ཁོ་རའི་སྐུ་ཚ་བོ་ གཟིམ་དཔོན་བཀྲ་ཤིས་རྣམ་རྒྱལ་ ཁྲི་ཐོག་ལུ་བཏོན་པའི་ཤུལ་མ་ སྤྱི་ལོ་ ༡༧༩༢ གི་ལོ་ལུ་ དགོངས་པ་རྫོགས་སོ་ནུག་གོ།།</big>
 
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་པ་བཀྲ་ཤིས་རྣམ་རྒྱལ་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་མཛད་པ། ==== 
+	
+<big>སྡེ་སྲིད་ཉི་ཤུ་པ་བཀྲ་ཤིས་རྣམ་རྒྱལ་མཆོག་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ཝང་སི་སི་ན་ལུ་ ཡབ་རྒེད་པོ་དཀར་པོའི་སྲས་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་བཀྲ་ཤིས་རྣམ་རྒྱལ་ཟེར་གསོལ་གནང་ནུག། ཨིན་རུང་ ཤུལ་ལས་ ཁོང་ར་སྡེ་ཁྲི་ལུ་འབྱོནམ་ད་ ཞབས་དྲུང་གསུང་སྤྲུལ་གསུམ་པ་ འཇིགས་མེད་གྲགས་པ་གིས་ ཁོ་གི་མཚན་ བསོད་ནམས་རྒྱལ་མཚན་ཟེར་གསོལ་གནང་ནུག། སྡེ་སྲིད་མཆོག་ སྐུ་ན་ཆུང་ཀུ་ཅིག་ལས་ར་ ཁོ་རའི་ཨ་ཁུ་སྡེ་སྲིད་སངས་རྒྱས་བསྟན་འཛིན་གྱི་ཕྱག་ཞུ་སྟེ་ དཔལ་ལྡན་འབྲུག་པའི་ཆོས་སྲིད་ཀྱི་རྣམ་གཞག་ལུ་ མཁས་པ་སྦྱངས་ཡོདཔ་དང་ ཤུལ་མ་སྡེ་པ་བསྟན་འཛིན་རྣམ་རྒྱལ་ སྡེ་ཁྲི་ལུ་འབྱོནམ་ད་ བཀྲ་ཤིས་རྣམ་རྒྱལ་འདི་ གོང་གཟིམ་གྱི་གོ་གནས་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག།</big> 
+==== སྡེ་ཁྲི་ལུ་བྱོན་པའི་བློ་རྒྱུས། ==== 
+	
+<big>སྡེ་སྲིད་བཅུ་དགུ་པ་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ སྐུ་བསྙུངས་ཏེ་ སྨན་བཅོཤ་དང་རིམ་གྲོ་ག་ཅི་ར་འབད་རུང་ ཕན་ཐོགས་མ་ཚུགས་པར་ སྤྱི་ལོ ༡༧༩༢ གི་ལོ་ལུ་ སྡེ་པ་ཁོ་རའི་སྐུ་ཚབ་སྦེ་ ཁོ་གི་སྐུ་ཚ་བོ་གོང་གཟིམ་བཀྲ་ཤིས་རྣམ་རྒྱལ་འདི་ སྡེ་སྲིད་ཉི་ཤུ་པའི་ཁྲི་ཐོག་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག། ཨིན་རུང་ ཨ་ཁུ་ཞིང་ལུ་བྱོན་པའི་ཤུལ་མ་ ཆགས་སྡང་དང་ཕྱོགས་རིས་ཡོད་མི་ཚུ་གིས་ འདི་ལུ་ངོས་ལེན་མ་འབད་བར་ དབུ་མཛད་སྐྱབས་ཁྲ་པ་ཡང་སྡེ་ཁྲི་ལུ་བསྐོ་བཞག་མཛད་དེ་ སྡེ་སྲིད་ཀྱི་གོ་གནས་ཁར་ ཁོང་གཉིས་བཞུགས་དགོཔ་ཐོན་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ། 	 ====
+<big>གོང་གཟིམ་བཀྲ་ཤིས་རྣམ་རྒྱལ་མཆོག་ སྡེ་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་ལས་ དང་པ་ར་ ཆོས་ལུགས་བདག་འཛིན་འཐབ་མི་ སྐྱབས་རྗེའི་སྐུ་ཚབ་མཛད་མི་ རྡོར་སློབ་མེདཔ་ལས་ སྤྱི་ལོ་ ༡༧༩༢ ཀྱི་ལོ་ནང་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་བཞུགསཔ་ད་ དཀྱིལ་སློབ་འཇམ་དབྱངས་རྒྱལ་མཚན་མཆོག་ རྡོར་སློབ་ཀྱི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་མཛད་གནང་ནུག། འབྲུག་རྒྱལ་ཁབ་འདི་ སྡེ་སྲིད་གོང་མ་ཚུ་གི་བཀའ་དྲིན་ལས་ གོརྵ་རྒྱལ་ཁབ་དང་འབྲེལ་བ་སྦོམ་ཡོདཔ་ལས་ གོརྵའི་དམག་སྡེ་ཚུ་ སྤྱི་ལོ་ ༡༧༨༧ ལས་འགོ་བཙུགས་ སྤྱི་ལོ་ ༡༧༩༡ ཚུན་ བོད་དམག་ལུ་འགྱོ་ཡོདཔ་ཨིན་རུང་ གོརྵའི་དམག་འདི་ ལྷ་ས་ལུ་ལྷོདཔ་ད་ བོད་དམག་གིས་ རྒྱ་ནག་ལས་རྒྱབ་སྐྱོར་ལེན་ཏེ་ བོད་དམག་ཕམ་མ་ཚུགསཔ་མ་ཚད་ གོརྵའི་རྒྱལ་ཁབ་ཀྱི་རང་དབང་ལུ་ཡང་ཉེན་ཁ་སྦོམ་ཐོན་ཡོདཔ་ཨིན་མས། དེ་ལུ་ ནང་འགྲིག་འབད་བར་ འབྲུག་རྒྱལ་ཁབ་ལས་ སྡེ་པ་ཁོང་གི་སྐུ་ཚབ་སྦེ་ དྲུང་ཆེན་བཏང་སྟེ་ ནང་འགྲིག་རྐྱབ་སྟེ་ མཐུན་འབྲེལ་སྦོམ་ར་བཟོ་གནང་ནུག། དེ་གིས་མ་ཚད་ བོད་དང་གོརྵ་རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ན་ དམག་འཁྲུག་ལངམ་ད་ བོད་ཀྱི་འབྲས་ལྗོངས་ལས་རྒྱབ་སྐྱོར་ལེན་ཏེ་ དམག་འཁྲུག་ལང་བའི་སྐབས་ འབྲས་ལྗོངས་ཀྱི་ས་ཆ་གོརྵ་ལུ་ཤོར་ཡོད་མི་འདི་ཡང་ ལོག་སྟེ་འབྲས་ལྗོངས་ལུ་རྩིས་སྤྲོད་ཡོདཔ་དང་ ཆིངས་འགྲིག་ཡང་བཟོ་ནུག།</big> 
+==== རྟེན་དང་བརྟེན་པ་ལུ་བསྙེན་བཀུར། 	 ====
+<big>སྡེ་སྲིད་མཆོག་ རྒྱལ་ཁབ་ཀྱི་མཐུན་འབྲེལ་དང་ རང་དབང་ལུ་གཙོ་བོ་བཏོན་མི་ཅིག་ཨིནམ་མ་ཚད་ ཆོས་ལུ་ཡང་ དད་པ་སྦོམ་ཡོད་མི་ཅིག་ཨིན་པས། དེ་འབད་ནི་འདི་གིས་ སྡེ་སྲིད་མཆོག་གིས་ ཆོས་དང་འབྲེལ་བའི་ཕྱག་ལཱ་ མང་རབས་ཅིག་མཛད་གནང་ནུག། དེའི་ནང་ལས་ དང་པ་ར་ སྤུ་ན་རྫོང་ནང་གི་ཞབས་དྲུང་རིན་པོ་ཆེའི་གོས་སྐུ་མཐོང་གྲོལ་གསར་བཞེངས་མཛད་ཡོདཔ་དང་ རབ་གནས་ཡང་རྒྱས་ཤིང་རྒྱསཔ་མཛད་དེ་ སྤུ་ན་རྫོང་ལུ་ རྩིས་སྤྲོད་མཛད་གནང་ནུག། དེ་དང་གཅིག་ཁར་ བདེ་མཆོག་དཀྱིལ་འཁོར་གསེར་ཟངས་ལས་བསྒྲུབས་མི་ཅིག་ སྤུ་ན་རྫོང་གི་བླ་མ་ལྷ་ཁང་ནང་གི་ནང་རྟེན་སྦེ་གསར་བཞེངས་མཛད་གནང་ནུག། དེ་གིས་མ་དོ་བར་ བླམ་རྩ་ཅན་དཔལ་ཤེས་རབ་སེང་གེ་མཆོག་ ན་ལནྡ་ལུ་དགོངས་པ་རྫོགས་མི་འདི་ཡང་ སྐུ་གདུང་འབྲུག་ལུ་གདན་འདྲེན་ཞུ་སྟེ་ དགོངས་རྫོགས་རྒྱས་པར་བསྒྲུབས་གནང་ནུག། དེ་མ་ཚད་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་ འཇིགས་མེད་གྲགས་པ་མཆོག་ སྡེ་སྲིད་ཀྱིས་འགོ་འདྲེན་ཐོག་ལས་ ངོས་འཛིན་འཁྲིལ་མེདཔ་སྦེ་བསྒྲུབས་ཏེ་ བླ་མ་ཁྲི་པའི་གསེར་ཁྲི་ལུ་མངའ་གསོལ་མཛད་གནང་ཡོདཔ་ཨིན་པས།</big>
+==== སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་པའི་སྐོར། ==== 
+		
+<big>སྡེ་སྲིད་བསོད་ནམས་རྒྱལ་མཚན་དང་ སྡེ་སྲིད་དབུ་མཛད་སྐྱབས་ཁྲ་པ་གཉིས་ སྡེ་སྲིད་ཟུང་འབྲེལ་སྦེ་བཞུགས་པའི་བར་སྐབས་ཅིག་ལས་ སྡེ་སྲིད་དབུ་མཛད་སྐུ་བསྙུངས་ཏེ་གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་བཞུགསཔ་ད་ དགོངས་པ་རྫོགས་སོ་པའི་ཁར་ སྡེ་སྲིད་བསོད་ནམས་རྒྱལ་མཚན་ཁོ་ར་ཡང་ ནང་ཟིང་བྱུང་མི་ལུ་གཟིགས་ཏེ་ ཐུགས་ཕམ་སྟེ་ཟུར་བཞུགས་མཛད་གནང་ནུག།</big>
+==== སྡེ་ཁྲི་སྤངས་བའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+			
+<big>སྡེ་སྲིད་མཆོག་ སྡེ་ཁྲི་ལས་ཟུར་བཞུགས་མཛད་ཡོད་རུང་ རྒྱལ་ཁབ་ཀྱི་མཐའ་དོན་ལུ་ཕྱག་ལཱ་མཛད་ནི་འདི་ བཀོ་མ་བཞག་པར་ ཀུན་མཁྱེན་པདྨ་དཀར་པོ་གི་བཀའ་འབུམ་ཆོས་ཚན་ཆ་ཚང་ཅིག་ པར་བརྐོ་བའི་སྐབས་ སྦྱིན་བདག་མཛད་གནང་ནུག། ཤུལ་མ་ སྤུ་ན་ཁ་རྫོང་མེ་མཆོད་ཐེངས་གཉིས་པ་བཞེས་ཏེ་ བསྐྱར་བཞེངས་མཛད་པའི་སྐབས་ལུ་ཡང་ རྒྱབ་སྐྱོར་མཛད་གནང་ཡོདཔ་མ་ཚད་ སྤུ་ན་ཁ་གི་འཛམ་གླིང་དགའ་ཚལ་ཕོ་བྲང་ཉམས་ཆག་ཤོར་ཡོད་མི་འདི་ཡང་ བསྐྱར་བཞེངས་མཛད་གནང་སྟེ་ མིང་ཡང་བསོད་ནམས་དགའ་ཚལ་ཟེར་བཏགས་གནང་ནུག། སྡེ་སྲིད་མཆོག་ ནང་ཟིང་ལུ་བརྟེན་ཏེ་ སྡེ་ཁྲི་ལས་ཟུར་བཞུགས་མཛད་གནང་ཡོད་རུང་ སྤྱི་ལོ་ ༡༨༠༣ ཟུར་བཞུགས་མཛད་དེ་ ལོ་བརྒྱད་ལངས་པའི་ཤུལ་ལས་ ལོག་སྟེ་ར་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་གསུམ་པའི་ཁྲི་ཐོག་ལུ་བྱོན་གནང་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
