/* སྡེ་ཁྲི་སྤངས་བའི་ཤུལ་གྱི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -306,6 +306,55 @@
 			
 <big>སྡེ་སྲིད་མཆོག་ སྡེ་ཁྲི་ལས་ཟུར་བཞུགས་མཛད་ཡོད་རུང་ རྒྱལ་ཁབ་ཀྱི་མཐའ་དོན་ལུ་ཕྱག་ལཱ་མཛད་ནི་འདི་ བཀོ་མ་བཞག་པར་ ཀུན་མཁྱེན་པདྨ་དཀར་པོ་གི་བཀའ་འབུམ་ཆོས་ཚན་ཆ་ཚང་ཅིག་ པར་བརྐོ་བའི་སྐབས་ སྦྱིན་བདག་མཛད་གནང་ནུག། ཤུལ་མ་ སྤུ་ན་ཁ་རྫོང་མེ་མཆོད་ཐེངས་གཉིས་པ་བཞེས་ཏེ་ བསྐྱར་བཞེངས་མཛད་པའི་སྐབས་ལུ་ཡང་ རྒྱབ་སྐྱོར་མཛད་གནང་ཡོདཔ་མ་ཚད་ སྤུ་ན་ཁ་གི་འཛམ་གླིང་དགའ་ཚལ་ཕོ་བྲང་ཉམས་ཆག་ཤོར་ཡོད་མི་འདི་ཡང་ བསྐྱར་བཞེངས་མཛད་གནང་སྟེ་ མིང་ཡང་བསོད་ནམས་དགའ་ཚལ་ཟེར་བཏགས་གནང་ནུག། སྡེ་སྲིད་མཆོག་ ནང་ཟིང་ལུ་བརྟེན་ཏེ་ སྡེ་ཁྲི་ལས་ཟུར་བཞུགས་མཛད་གནང་ཡོད་རུང་ སྤྱི་ལོ་ ༡༨༠༣ ཟུར་བཞུགས་མཛད་དེ་ ལོ་བརྒྱད་ལངས་པའི་ཤུལ་ལས་ ལོག་སྟེ་ར་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་གསུམ་པའི་ཁྲི་ཐོག་ལུ་བྱོན་གནང་ནུག།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གཅིག་པ་ས་སྐྱོང་མི་དབང་དབུ་མཛད་སྐྱབས་ཁྲ་པའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>ས་སྐྱོང་མི་དབང་དབུ་མཛད་སྐྱབས་ཁྲ་པ་མཆོག་ ཐིམ་ཕུག་སྐྱབས་ཁྲ་ལུ་སྐུ་འཁྲུངས་ཏེ་ སྐུ་ན་ཆུང་ཀུའི་དུས་སྐབས་ལས་ སྐུ་ཡོན་དང་སྒྲིག་ལམ་ཆོས་གསུམ་གྱི་སྦྱང་བ་ཚུ་དང་ དཀྱིལ་ཆོག་གི་དབྱངས་ཐིག་གར་གསུམ་ཚུ་ གྲྭ་ཚང་འདུས་སྡེ་ལུ་བཞུགས་ཏེ་མཐར་ཕྱིན་ཡོདཔ་ལས་ གྲྭ་ཚང་ནང་དབུ་མཛད་ཀྱི་གོ་གནས་བཞེས་ཏེ་བཞུགས་ནུག།<br>
+
+སྤྱི་ལོ་ ༡༧༩༢ ཟླཝ་ ༡༢ པའི་ནང་ སྡེ་སྲིད་ཁྲི་རབས་ ༡༩ པ་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ སྐུ་བསྙུངས་ཏེ་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངསམ་ཞུཝ་ད་ ཁོ་རའི་སྐུ་ཚ་བོ་བཀྲ་ཤིས་རྣམ་རྒྱལ་ སྡེ་སྲིད་ ༢༠ པའི་ཁྲི་ཐོག་ལུ་བསྐོ་བཞག་གནང་པའི་ཤུལ་ལས་ ཟླཝ་དག་པ་ཅིག་སྲིད་སྐྱོང་སྟེ་བཞུགས་པའི་མཐའ་མ་གཤགས་སོཔ་ལས་ ཕྱོགས་རིས་ཅན་ཚུ་གིས་དབུ་མཛད་སྐྱབས་ཁྲ་པ་སྡེ་སྲིད་ཉི་ཤུ་རྩ་གཅིག་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག</big>།
+  
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ་དང་མཛད་པ་མཐའ་མ། ====
+<big>སྡེ་སྲིད་དབུ་མཛད་སྐྱབས་ཁྲ་པ་དང་ བསོད་ནམས་རྒྱལ་མཚན་གཉིས་ སྡེ་ཁྲི་ཟུང་འབྲེལ་སྦེ་སྲིད་སྐྱོང་མཛད་དེ་བཞུགས་ཡོདཔ་ལས་ སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་ལུ་ལོ་གསུམ་དེ་ཅིག་བཞུགས་ཡོད་རུང་ སྡེ་སྲིད་དབུ་མཛད་སྐྱབས་ཁྲ་པའི་མཛད་པ་ལོགས་སུ་ཅིག་བཀོད་ཡོད་མི་འདི་མཇལ་སར་མིན་འདུག།<br>
+
+རྡོ་རྗེ་སློབ་དཔོན་འཇམ་དབྱངས་རྒྱལ་མཚན་མཆོག་ གདན་ས་མདོ་སྡེ་བྲག་ལུ་བཞུགས་པའི་སྐབས་ལུ་ སྡེ་སྲིད་དབུ་མཛད་སྐྱབས་ཁྲ་པ་མཆོག་ཐིམ་ཕུག་བཀྲ་ཤིས་ཆོས་རྫོང་ལུ་ སྐུ་བསྙུངས་ཏེ་བཞུགས་ཡོདཔ་གསན་ཏེ་ རྡོ་རྗེ་སློབ་དཔོན་གདན་འདྲེན་ཞུ་སྟེ་ སྐུ་རིམ་བསྒྲུབས་གནང་ཡོད་རུང་ དྲག་མ་བཏུབ་པར་དགོངས་པ་རྫོགས་སོ་ནུག་གོ།</big>
+
+=== སྡེ་སྲིད་ཉི་ཤུ་རྩ་གཉིས་པ་ས་སྐྱོང་མི་དབང་གོང་གཟིམ་འབྲུག་རྣམ་རྒྱལ་གྱི་མཛད་རྣམ། ===
+ 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཉིར་གཉིས་པ་ས་སྐྱོང་མི་དབང་གོང་གཟིམ་འབྲུག་རྣམ་རྒྱལ་མཆོག་ ཝང་ཚོ་ཆེན་བརྒྱད་ཀྱི་ནང་གསེས་སྨད་ཝང་དར་ལུང་ཁ་ལུ་སྐུ་འཁྲུངས་ཏེ་ ཆོས་རྗེ་འབྲུག་པའི་སྒར་གྲལ་ལུ་ཞུགས་ནུག། སྡེ་སྲིད་མཆོག་གི་སྒྲིག་ལམ་དང་ཆོས་སྲིད་གཉིས་ཀྱི་རིང་ལུགས་ཚུ་ཆོས་རྗེ་དཔལ་ལྡན་འབྲུག་པའི་སྒར་ལྟོའི་གྲལ་ཁར་ཞུགས་ཏེ་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ མཐར་ཕྱིནམ་སྦེ་སྦྱངས་ནུག། གཞུང་གི་ལས་སྡེ་ནང་ལས་ གཞུང་ཞབས་ཚུ་གི་གྲས་ལས་ལྕོགས་གྲུབ་ཅན་ཨིན་པའི་ཁར་ གོ་གནས་ཚུ་རིམ་པ་བཞིན་ གོམ་པ་ཡར་འཛེགས་ཏེ་ གོང་གཟིམ་གྱི་གོ་གནས་བཞེས་ནུག། <br>
+ 
+འབྲུག་ལུ་ནང་འཁྲུག་གི་རྐྱེན་ལས་ སྡེ་སྲིད་བསོད་ནམས་རྒྱལ་མཚན་ཟུར་བཞུགས་སྦེ་སྡོད་དགོཔ་བྱུངམ་ལས་ རང་ལུགས་འདས་ལོ་ ༡༤༩ རབ་བྱུང་བཅུ་གསུམ་པའི་ས་ལུག་ལུ་ གོང་གཟིམ་འབྲུག་རྣམ་རྒྱལ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་གཉིས་པའི་ཁྲི་ལུ་མངའ་གསོལ་མཛད་གནང་ནུག།</big>
+ 
+==== སྡེ་སྲིད་ཁྲི་ཐོག་ལུ་ཕེབས་པའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+<big>སྡེ་སྲིད་མཆོག་སྤུ་ན་ཁ་ལུ་ཁྲི་མངའ་གསོལ་མཛད་ཚར་བའི་མཐའ་མར་ རྫོང་གཞིས་མང་རབས་ཅིག་གི་ཉམས་གསོ་ཞུ་ཡོདཔ་དང་ བཀའ་བརྒྱུད་གོང་མའི་རྣམ་ཐར་ཚུ་དང་ རྣམ་དཀར་གྱི་དགེ་ཚོགས་གཞན་ལས་ཁྱད་དུ་འཕགསཔ་སྦེ་གཟིགས་ཏེ་ བརྒྱད་སྟོང་པ་དང་རྒྱ་ཆེ་རོལ་པ། གསོ་བ་རིག་པའི་རྩ་རྒྱུད་དང་བཤད་རྒྱུད། གུ་རུའི་བཀའ་ཐང་གསེར་འཕྲེང་མ་ལ་སོགས་པའི་གསུང་རབ་མང་ཤོས་ཅིག་ པར་ཤིང་སྦེ་བརྐོ་སྟེ་ ཆོས་ཀྱི་འགྲོ་དོན་བསྐྱངས་གནང་ནུག། ཧེ་མ་འབད་བ་ཅིན་ པར་ཤིང་དེ་ཚུ་ སྤུ་ན་ཁ་ཐང་རྫོང་ནང་ལུ་བཞུགས་ཡོདཔ་ཨིན་རུང་ ཤུལ་མ་བསོད་ནམས་དགའ་ཚལ་ལུ་གདན་འདྲེན་ཞུ་ནུག། <br>
+
+མི་དབང་སྡེ་སྲིད་འབྲུག་རྣམ་རྒྱལ་དང་ ཁྲི་ཟུར་བསོད་ནམས་རྒྱལ་མཚན་གཉིས་ཀྱིས་ རྡོ་རྗེ་སློབ་དཔོན་འཇམ་དབྱངས་རྒྱལ་མཚན་མཆོག་ མཁན་རབས་བཅོ་བརྒྱད་པའི་ཁྲི་ལུ་ མངའ་གསོལ་ཞུ་བའི་སྐབས་ལུ་ བཀྲ་ཤིས་པའི་ཁྲི་དར་ལེགས་སྨོན་དང་བཅསཔ་སྦེ་ཕུལ་ནུག། དེ་ཡང་ རྗེ་མཁན་ཁྲི་རབས་བཅུ་བདུན་པ་བྱམས་མགོན་ཡེ་ཤེས་རྡོ་རྗེ་མཆོག་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལས་ཐིམ་ཕུག་ལུ་ཕེབས་ཏེ་ ཟླཝ་ ༥ པའི་ཚེས་ ༡༣ ལུ་ མཁན་ཁྲི་ལས་ཟུར་བཞུགས་སྦེ་སྡོད་དགོཔ་བྱུང་ཡོདཔ་ཨིན་པས། <br>
+
+སྤུང་ཐང་བདེ་བ་ཆེན་པོའི་ཕོ་བྲང་འདི་ སྤྱི་ལོ་ ༡༧༨༠ ལུ་ མེ་རྐྱེན་ཐེངས་དང་པ་བཞེས་པའི་སྐབས་ གོང་ས་འཇིགས་མེད་སེངྒེ་གིས་ལོག་བཞེངས་ཡོད་རུང་ སྤྱི་ལོ་ ༡༧༩༨ ཟླཝ་ ༡ པའི་ཚེས་ ༩ ལུ་མེ་མཆོད་ཐེངས་གཉིས་པ་བཞེས་ནུག། དེའི་སྐབས་ལུ་ རྗེ་འཇམ་དབྱངས་རྒྱལ་མཚན་གྱི་འགོ་འདྲེན་ཐོག་ལས་ ནང་རྟེན་གྱི་རིགས་ཚུ་བརྩོན་ཤུགས་བསྐྱེད་དེ་ གསར་བཞེངས་མཛད་གནང་པའི་སྐབས་ སྡེ་སྲིད་ཁྲི་པ་འབྲུག་རྣམ་རྒྱལ་དང་ ཁྲི་ཟུར་བསོད་ནམས་རྒྱལ་མཚན་གཉིས་ཀྱིས་ཡང་རྒྱབ་རྟེན་སྦོམ་མཛད་གནང་ནུག། དེ་མ་ཚད་ སྡེ་སྲིད་མཆོག་གི་བསྒྲུབས་སྟོན་རབ་གནས་ཀྱི་དགའ་སྟོན་ཡང་མཛད་གནང་ནུག། <br>
+
+མི་དབང་སྡེ་སྲིད་འབྲུག་བསྟན་འཛིན་མཆོག་གིས་ ངག་དབང་ཆོས་ཀྱི་རྒྱལ་པོའི་གདན་ས་ གླང་དཀར་མཐོང་གྲོལ་དགའ་ཚལ་གཙུག་ལག་ཁང་གསརཔ་བཞེངས་པའི་སྐབས་ལུ་ བཀུར་སྟི་དང་རྒྱབ་སྐྱོར་མཛད་གནང་ནུག། སྡེ་སྲིད་མཆོག་གི་འབྲུག་ཆེན་ངག་དབང་ཆོས་ཀྱི་རྒྱལ་པོའི་གདན་ས་ ཁུ་བྱུག་ཆོས་སྐྱོང་ཕོ་བྲང་འདི་ ལོག་གསར་བཞེངས་གནང་ནུག། <br>
+
+ཞབས་དྲུང་གསུང་སྤྲུལ་གསུམ་པ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ ཡོངས་འཛིན་མཁན་ཆེན་འཇམ་དབྱངས་རྒྱལ་མཚན་ལས་ སྨིན་གྲོལ་གདམས་ངག་བཞུགས་བའི་སྐབས་ལུ་ སྡེ་སྲིད་ཁྲི་པ་འབྲུག་རྣམ་རྒྱལ་མཆོག་གིས་ བསྙེན་བཀུར་དང་ཞབས་ཏོག་ཚུ་ཕུལ་ཡོདཔ་དང་ ཞབས་དྲུང་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་རྩ་བའི་བླམ་སྦེ་བསྟེན་གནང་ནུག།  <br>
+
+ས་སྐྱོང་འབྲུག་རྣམ་རྒྱལ་མཆོག་གིས་ རིལ་སྒྲུབ་ཆེན་མོ་བཙུགས་ནིའི་དོན་ལུ་ མཁན་ཆེན་འཇམ་དབྱངས་རྒྱལ་མཚན་མཆོག་ལུ་ གསོལཝ་བཏབ་སྟེ་ དགེ་འདུན་དམངས་ཀྱིས་དགུང་ཞག་བཅུ་ཕྲག་གི་བར་ན་ བདེ་ཆོག་དུང་ཕྱུར་བསྒྲུབས་གནང་ནུག། <br>
+
+སྡེ་སྲིད་ཁྲི་པ་འབྲུག་རྣམ་རྒྱལ་དང་ཁྲི་ཟུར་བསོད་ནམས་རྒྱལ་མཚན་གཉིས་ཀྱི་བར་ན་ མི་ངན་ཚུ་གིས་ཐུགས་སྣང་མ་མཐུནམ་བཟོ་ཡོད་མི་འདི་ རྗེ་འཇམ་དབྱངས་རྒྱལ་མཚན་གྱིས་ཟིང་འཁྲུག་ལང་མ་བཅུག་པར་ ཐེངས་གཅིག་ཞི་བར་འཇོམས་ཡོད་རུང་ ལོག་ཟིང་འཁྲུག་ལང་པའི་སྐབས་ སྡེ་སྲིད་ཁྲི་ཟུར་གྱིས་ སྡེ་སྲིད་ཁྲི་པ་འབྲུག་རྣམ་རྒྱལ་མཆོག་བཀྲོངས་ད་ནུག། སྡེ་སྲིད་མཆོག་གི་ཆོས་རྒྱལ་དམ་པའི་མཛད་པ་ཟུར་ཙམ་སྟོན་ཏེ་ ལོ་ངོ་བཞི་དེམ་ཅིག་ ཁྲི་ཐོག་ལུ་གཞུང་དང་མི་སེར་ཚུ་ལུ་ཕྱག་ཞུ་སྟེ་བཞུགས་ཡོདཔ་ཨིན་པས།
+</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གསུམ་པ་ས་སྐྱོང་མི་དབང་བཀྲ་ཤིས་རྣམ་རྒྱལ།་(བསོད་ནམས་རྒྱལ་མཚན) ===
+  
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>ས་སྐྱོང་མི་དབང་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གསུམ་པ་མཆོག་ གཡུས་ཝང་སི་སི་ཕྱུག་མོའི་མི་ཚན་ནང་ རྒེད་པོ་དཀར་པོའི་སྲས་ལུ་སྐུ་འཁྲུངས་ཏེ་མཚན་ལུ་བཀྲ་ཤིས་རྣམ་རྒྱལ་ཟེར་གསོལ་ཡོད་པའི་ཁར་ ཤུལ་མ་ཞབས་དྲུང་སྐུ་འཕྲེང་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ མཚན་བསོད་ནམས་རྒྱལ་མཚན་ཟེར་གསོལ་ནུག། སྡེ་སྲིད་མཆོག་གིས་ཨ་ཁུ་སྤུངས་རྫོང་པ་ འབྲུག་བསྟན་འཛིན་ལུ་སྐུ་ན་ཆུང་ཀུའི་བསྒང་་ལས་ར་ཕྱག་ཞུ་སྟེ་ ཤུལ་མ་འབྲུག་རྣམ་རྒྱལ་མཆོག་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་འབྱོནམ་ད་ ས་སྐྱོང་མི་དབང་བཀྲ་ཤིས་རྣམ་རྒྱལ་མཆོག་ཡང་གོང་གཟིམ་གྱི་གོ་གནས་གསོལ་གནང་ནུག། <br>
+
+རང་ལུགས་འདས་ལོ་ ༡༤༢ པ་རབ་བྱུང་བཅུ་གསུམ་པའི་སྐབས་ མི་དབང་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་ཐིམ་རྫོང་པ་སྦེ་ཕྱག་ཞུ་སྟེ་སྡེད་པའི་བར་ན་ ཨ་ཁུ་གཤགས་པའི་མཐའ་མར་ སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་པའི་ཁྲི་ཁར་བྱོན་གནང་ནུག། སྤྱི་ལོ་ ༡༧༩༦  ལུ་ ས་སྐྱོང་མི་དབང་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་པ་སྦེ་བཞུགསཔ་ད་ ནང་འཁྲུག་བྱུང་སྟེ་ལོ་ངོ་ ༧ གྱི་རིང་ལུ་ ཟུར་བཞུགས་སྦེ་བཞུགས་དགོཔ་ཐོན་ནུག། དེའི་ཤུལ་མ་ སྡེ་སྲིད་ཁྲི་པ་དང་ སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གཉིས་པ་འབྲུག་རྣམ་རྒྱལ་གཉིས་ཀྱི་བར་ན་ སྤྱི་ལོ་ ༡༨༠༣ ་ལུ་ ནང་འཁྲུག་ལང་པའི་སྐབས་ བཀྲ་ཤིས་རྣམ་རྒྱལ་གྱིས་རྒྱལ་ཁ་ཐོབ་ཡོདཔ་ལས་ སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གསུམ་པ་སྦེ་ཁྲི་མངའ་གསོལ་ནུག།</big> 
+ 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ==== 
+<big>སྤྱི་ལོ་ ༡༨༠༣ ཆུ་ཕག་ཟླཝ་ ༢ པའི་ཚེས་ ༨ ལུ་ མི་ངན་ཚུ་གིས་སྡེ་སྲིད་མཆོག་གི་གདན་ས་འདི་ མེ་དཔགས་གཏངམ་ལས་ སྤུ་ན་ཁ་རྫོང་འདི་མེ་མཆོད་ཐེངས་གསུམ་པ་བཞེས་ནུག། དེ་ཡང་ སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་ཁར་ཕེབས་ཏེ་ ཟླ་ངོ་གཅིག་གི་བར་ན་བྱུང་ཡོདཔ་སྦེ་ཨིན་པས། མེའི་འཇིགས་པ་གིས་གདན་ས་མེ་རྐྱེན་ཤོར་ཡོད་རུང་ འདི་འཕྲོ་ལས་བསྐྱར་བཞེངས་ཀྱི་ཕྱག་ལཱ་འབད་ནི་འགོ་བཙུགས་ཏེ་ ལོ་ངོ་གཅིག་གི་ནང་འཁོད་ལུ་བསྒྲུབས་གནང་ནུག།<br>
+
+མཁན་ཆེན་འཇམ་དབྱངས་རྒྱལ་མཚན་གྱིས་ སྤུང་ཐང་བདེ་བ་ཆེན་པའི་ཕོ་བྲང་མེ་རྐྱེན་ཐེངས་གཉིས་པ་བཞེས་པའི་སྐབས་ ནང་རྟེན་འདི་ཚུ་ཐུགས་རྩོལ་ཆེན་པོའི་སྒོ་ལས་བསྒྲུབས་གནང་པའི་མཐའ་མ་ སྤྱི་ལོ་ ༡༨༠༣  ལུ་ ད་རུང་མེ་རྐྱེན་ཐེངས་གསུམ་པ་ཤོརཝ་ལས་ ཐུགས་ཕམ་པའི་ཤུགས་ཀྱིས་དགོངས་པ་རྫོགས་སོ་ནུག། ཁྲི་སྤྲུལ་གསུམ་པ་ཚུལ་ཁྲིམས་གྲགས་པའི་ཡོངས་འཛིན་ངག་དབང་ཆོས་རྒྱལ་མཆོག་ སྡེ་སྲིད་བསོད་ནམས་རྒྱལ་མཚན་གྱིས་མཁན་ཆེན་བཅུ་དགུ་པའི་ཁྲི་ལུ་མངའ་གསོལ་མཛད་གནང་ནུག།<br>
+
+སྡེ་སྲིད་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་གི་སྤྱི་ལོ་ ༡༨༠༣ ལས་ སྤྱི་ལོ་ ༡༨༠༥ ཚུན་ ཁྲི་ཐོག་གུར་ཕྱག་ཕྱིད་ཞུ་ཡོད་རུང་ སྤྱི་ལོ་ ་ ༡༨༠༥ གི་ལོ་ལུ་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལས་ཐིམ་ཕུག་ལུ་འབྱོན་ནི་རནམ་ད་ སྡེ་སྲིད་མཆོག་དགོན་པར་འབྱོན་ནི་སྦེ་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངསམ་ཞུ་ནུག། སྡེ་སྲིད་མཆོག་གི་ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་ལུ་སྡེ་སྲིད་ཀྱི་ཕྱག་འགན་ཕུལ་ཏེ་ ཉིནམ་དག་པ་ཅིག་གི་རྒྱབ་ལས་ སྡེ་སྲིད་མཆོག་ཤུགས་སྦེ་བསྙུངས་ཏེ་བཞུགས་ཡོད་པའི་ཁར་ སྐུ་རིམ་ཟློག་ཐབས་ཚུ་ག་ཅི་བཟུམ་ཅིག་འབད་རུང་ཕན་མ་ཐོགས་པར་ སྐུ་ཚེ་ལུ་བར་ཆད་བྱུང་ནུག།
+</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
