/* སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -355,6 +355,19 @@
 སྡེ་སྲིད་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་གི་སྤྱི་ལོ་ ༡༨༠༣ ལས་ སྤྱི་ལོ་ ༡༨༠༥ ཚུན་ ཁྲི་ཐོག་གུར་ཕྱག་ཕྱིད་ཞུ་ཡོད་རུང་ སྤྱི་ལོ་ ་ ༡༨༠༥ གི་ལོ་ལུ་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལས་ཐིམ་ཕུག་ལུ་འབྱོན་ནི་རནམ་ད་ སྡེ་སྲིད་མཆོག་དགོན་པར་འབྱོན་ནི་སྦེ་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངསམ་ཞུ་ནུག། སྡེ་སྲིད་མཆོག་གི་ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་ལུ་སྡེ་སྲིད་ཀྱི་ཕྱག་འགན་ཕུལ་ཏེ་ ཉིནམ་དག་པ་ཅིག་གི་རྒྱབ་ལས་ སྡེ་སྲིད་མཆོག་ཤུགས་སྦེ་བསྙུངས་ཏེ་བཞུགས་ཡོད་པའི་ཁར་ སྐུ་རིམ་ཟློག་ཐབས་ཚུ་ག་ཅི་བཟུམ་ཅིག་འབད་རུང་ཕན་མ་ཐོགས་པར་ སྐུ་ཚེ་ལུ་བར་ཆད་བྱུང་ནུག།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་བཞི་པ་ཐིམ་རྫོང་པ་སངས་རྒྱས་བསྟན་འཛིན་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་མ་བྱོན་པའི་ཧེ་མའི་་མཛད་རྣམ། ====
+<big>ས་སྐྱོང་མི་དབང་ཐིམ་རྫོང་པ་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ གཡུས་ཝང་སི་སི་ཟེར་ས་ལུ་སྐུ་འཁྲུངས་ནུག། སྡེ་སྲིད་མཆོག་གིས་སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ ཁོ་རའི་ཨ་ཞང་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་པ་བཀྲ་ཤིས་རྣམ་རྒྱལ་ མཚན་གཞན་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་གི་སྒྲིག་ལུ་བཞུགས་བཅུག་ནུག། ཤུལ་ལས་ ཨ་ཞང་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལུ་འབྱོནམ་ད་ ཚ་བོ་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་སྲིད་སྐྱོང་ནི་དང་སྒྲིག་ལམ་རྣམ་གཞག་གི་སྦྱང་བ་ཐོབ་མི་ལུ་བརྟེན་ཏེ་ ཐིམ་ཕུག་རྫོང་དཔོན་གྱི་གོ་གནས་ལུ་བསྐོ་བཞག་གནང་ནུག།<br>
+
+སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གསུམ་པ་ས་སྐྱོང་མི་དབང་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་ སྤྱི་ལོ་ ༡༨༠༥ ཟླཝ་ ༦ པའི་ཚེས་ ༢ ལུ་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངསམ་ཞུ་སྦེ་ བླམ་ཁྲི་པ་ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་ལུ་ སྡེ་སྲིད་ཀྱི་གོ་གནས་ཕུལ་ཡོད་རུང་ སྡེ་སྲིད་ཁྲི་ཟུར་བསོད་ནམས་རྒྱལ་མཚན་མཆོག་ཟླཝ་དག་པ་ཅིག་གི་རྒྱབ་ལས་གཤགས་སོ་ནུག། དེ་འབད་བ་ལུ་བརྟེན་ སྤྱི་ལོ་ ༡༨༠༥ རབ་བྱུང་བཅུ་གསུམ་པ་ལུ་གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་ཕེབས་ད་ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ ཐིམ་རྫོང་པ་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་བཞི་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
+  
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་ཐོག་ལུ་ཕེབས་ཏེ་སྤྱི་ལོ་ ༡༨༠༦ ལུ་ ཆོས་རྩེ་པ་ཚ་ཕུ་རྡོ་རྗེ་གིས་ངོ་རྒོལ་འབད་དེ་གཞུང་དང་གཅིག་ཁར་དམག་རྐྱབ་པའི་སྐབས་ལུ་ གཞུང་གིས་ཆོས་རྩེ་པ་ཚ་ཕུ་རྡོ་རྗེ་ལས་རྒྱལ་ཁ་འཐོབ་མ་ཚུགས་པས། དེ་འབད་བ་ལུ་བརྟེན་ཏེ་ དམག་འདི་གིས་ ཚེ་སྲོག་ལུ་གནོད་སྐྱོན་མ་བྱུང་རུང་ རྒྱལ་ཁབ་སྐྱིད་ཉམས་སྐྱོང་ནིའི་དོན་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ སྡེ་སྲིད་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ཟུར་བཞུགས་དང་ དབུ་མཛད་སྤ་གྲོ་པ་སྡེ་སྲིད་ཁྲི་ཐོག་ལུ་བཏོན་ནི་སྦེ་གྲོས་འཆར་ཕུལཝ་ལས་ སྡེ་སྲིད་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ སྡེ་སྲིད་ལོ་གཅིག་མཛད་པའི་མཐའ་མ་ཁྲི་ཐོག་ལས་དགོངསམ་ཞུ་ནུག།</big>
+
+==== སྡེ་སྲིད་ལས་དགོངསམ་ཞུ་བའི་ཤུལ་མའི་ལོ་རྒྱུས། ====
+<big>ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་མ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གསུམ་པ་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ གནམ་དགུན་གྱི་སྐབས་ལུ་བ་ལིང་རིན་ཆེན་ཁང་བཟང་དང་ གནམ་བྱཱ་གི་སྐབས་ལུ་ཝང་ཀུན་བཟང་བདེ་ཆེན་གྱི་དགོན་པ་བཟུང་སྟེ་ཐུགས་དམ་ལུ་བརྩོན་ཤུགས་བསྐྱེད་དེ་བཞུགས་ནུག།
+</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
