/* སྡེ་སྲིད་ལས་དགོངསམ་ཞུ་བའི་ཤུལ་མའི་ལོ་རྒྱུས། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -368,6 +368,18 @@
 <big>ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་མ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གསུམ་པ་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ གནམ་དགུན་གྱི་སྐབས་ལུ་བ་ལིང་རིན་ཆེན་ཁང་བཟང་དང་ གནམ་བྱཱ་གི་སྐབས་ལུ་ཝང་ཀུན་བཟང་བདེ་ཆེན་གྱི་དགོན་པ་བཟུང་སྟེ་ཐུགས་དམ་ལུ་བརྩོན་ཤུགས་བསྐྱེད་དེ་བཞུགས་ནུག།
 </big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པ་ས་སྐྱང་མི་དབང་དབུ་མཛད་སྤ་གྲོ་པ། ===
+  
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>ས་སྐྱོང་མི་དབང་དབུ་མཛད་སྤ་གྲོ་པ་མཆོག་ སྤ་རོ་དོལ་ཕུ་ཟེར་ས་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་ཡེ་ཤེས་རྒྱལ་མཚན་ཟེར་གསོལ་གནང་ནུག་ (ཀརྨ་ཕུན་ཚོགས་ཀྱི་མཛད་པའི་རྒྱལ་རབ་ནང་བཀོད་དེ་འདུག།) སྡེ་སྲིད་མཆོག་སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ སྤུ་ན་ཁ་ལུ་གདན་ས་བཟུང་སྟེ་ གཞུང་གྲྭ་ཚང་ལུ་བཞུགས་སྦེ་སྒྲིག་ལམ་རྣམ་གཞག་དང་འབྲི་ཀློག་ དབྱངས་ཐིག་གར་གསུམ་གྱི་ཡོན་ཏན་ཚུ་མཐར་འཁྱོལཝ་ལས་ གྲྭ་ཚང་ནང་དབུ་མཛད་ཀྱི་གོ་གནས་བཞེས་ནུག།<br>
+སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་བཞི་པ་སངས་རྒྱས་མཆོག་ ཁྲི་ཐོག་ལུ་ཕེབས་ཏེ་ སྤྱི་ལོ་ ༡༨༠༦) ལུ་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུ་རྡོ་རྗེ་གིས་ངོ་རྒོལ་འབད་དེ་ གཞུང་དང་གཅིག་ཁར་ དམག་རྐྱབ་པའི་སྐབས་ལུ་ གཞུང་གི་ཆོས་རྩེ་པ་ཚ་ཕུ་རྡོ་རྗེ་ལས་རྒྱལ་ཁ་འཐོབ་མ་ཚུགས་པས། དེ་འབད་བ་ལུ་བརྟེན་ དམག་དེ་གི་སྦེ་ཚེ་སྲོག་ལུ་གནོད་སྐྱོན་མ་བྱུང་རུང་ རྒྱལ་ཁབ་སྐྱིད་ཉམས་སྐྱོང་ནིའི་དོན་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ སྡེ་སྲིད་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ཟུར་བཞུགས་དང་ ཤུལ་ལས་སྡེ་སྲིད་ཉེར་བཞི་པ་དགོངས་ཞུ་མཛད་པའི་མཐའ་མ་ རང་ལུགས་འདས་ལོ་ ༡༥༦ པ་རབ་བྱུང་བཅུ་གསུམ་ལུ་ དབུ་མཛད་སྤ་གྲོ་པ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པའི་ཁྲི་མངའ་གསོལ་གནང་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁརབྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པ་ཁྲི་ལུ་ཕེབས་ཏེ་ སྤྱི་ལོ་ ༡༨༠༧ ཟླཝ་ ༣ པའི་ནང་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་ཕེབས་ཏེ་བཞུགས་པའི་དུས་ལུ་ གོང་ས་འཇིགས་མེད་སེང་གེ་མཆོག་གི་གདན་ས་ རྟ་ལོག་གསང་སྔགས་གླིང་འདི་ བླམ་ཁྲི་པ་ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་ལུ་ཕུལ་ནུག། དེའི་ལོ་ནང་ལུ་ར་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུ་རྡོ་རྗེ་གིས་ སྤ་གྲོ་པ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཏེ་ ལོ་ལངས་རུང་ཉན་མ་བཏུབ་པར་ ཐིམ་གཞུང་ལུ་ངོ་རྒོལ་འབདཝ་འབད་སར་སྡོད་ནུག། དེ་འབདཝ་ལས་བརྟེན་ རྒྱལ་ཁབ་ཀྱི་ཞི་བདེའི་དོན་ལུ་ མཁན་ཆེན་ངག་དབང་ཆོས་རྒྱལ་གྱིས་ བླམ་ཁྲི་པ་བཅུ་གཅིག་པའི་གོ་གནས་གོང་ས་འཇིགས་མེད་སེང་གེའི་ཡང་སྲིད་ཚུལ་ཁྲིམས་གྲགས་པ་གསོལ་གནང་ནུག། སྡེ་སྲིད་དབུ་མཛད་སྤ་གྲོ་པ་དང་ བོད་འགྲོལཔ་དང་པ་ཚེ་རིང་དབང་ཆེན་གྱི་ཡང་སྲིད་སྐུ་ཞབས་པདྨ་ཆོས་གྲགས་གཉིས་ སྡེ་སྲིད་མི་ངོམ་གཉིས་ཟུང་འབྲེལ་སྦེ་གསོལ་གནང་པའི་ཤུལ་ལས་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་ངོ་རྒོལ་ཚར་གཅིག་ཞི་སོ་ནུག།<br>
+
+སྤྱི་ལོ་ ༡༨༠༧ ལུ་ མཁན་ཆེན་ཁྲི་རབས་བཅུ་དགུ་པ་ངག་དབང་ཆོས་རྒྱལ་མཆོག་ ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་པའི་མཐའ་མ་ བླམ་ཁྲི་པ་དང་ལྷན་རྒྱས་ཀྱིས་ མཁན་ཆེན་ཁྲི་རབས་ཉི་ཤུ་པའི་ཁྲི་ལུ་ ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་མངའ་གསོལ་ཞུ་གནང་ནུག།<br>
+
+སྤྱི་ལོ་ ༡༨༠༨ ཟླཝ་ ༡ པའི་ནང་སྡེ་སྲིད་གཉིས་ཀྱི་བར་ན་ཟིང་འཁྲུག་བྱུངམ་ལས་ མཁན་ཆེན་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་དང་ལྷན་རྒྱས་ཀྱིས་ སྐུ་ཞབས་པདྨ་ཆོས་གྲགས་ལུ་སྡེ་སྲིད་ཀྱི་དབང་ཚད་ཡོདཔ་སྦེ་བཟོ་གནང་སྟེ་ དབུ་མཛད་སྤ་གྲོ་པ་མཆོག་ཁྲི་ཐོག་ལས་དགོངསམ་ཞུ་བཅུག་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
