/* སྡེ་སྲིད་ཀྱི་ཁྲི་ཁརབྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -375,10 +375,21 @@
 སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་བཞི་པ་སངས་རྒྱས་མཆོག་ ཁྲི་ཐོག་ལུ་ཕེབས་ཏེ་ སྤྱི་ལོ་ ༡༨༠༦) ལུ་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུ་རྡོ་རྗེ་གིས་ངོ་རྒོལ་འབད་དེ་ གཞུང་དང་གཅིག་ཁར་ དམག་རྐྱབ་པའི་སྐབས་ལུ་ གཞུང་གི་ཆོས་རྩེ་པ་ཚ་ཕུ་རྡོ་རྗེ་ལས་རྒྱལ་ཁ་འཐོབ་མ་ཚུགས་པས། དེ་འབད་བ་ལུ་བརྟེན་ དམག་དེ་གི་སྦེ་ཚེ་སྲོག་ལུ་གནོད་སྐྱོན་མ་བྱུང་རུང་ རྒྱལ་ཁབ་སྐྱིད་ཉམས་སྐྱོང་ནིའི་དོན་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ སྡེ་སྲིད་སངས་རྒྱས་བསྟན་འཛིན་མཆོག་ཟུར་བཞུགས་དང་ ཤུལ་ལས་སྡེ་སྲིད་ཉེར་བཞི་པ་དགོངས་ཞུ་མཛད་པའི་མཐའ་མ་ རང་ལུགས་འདས་ལོ་ ༡༥༦ པ་རབ་བྱུང་བཅུ་གསུམ་ལུ་ དབུ་མཛད་སྤ་གྲོ་པ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པའི་ཁྲི་མངའ་གསོལ་གནང་ནུག།</big>
 ==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁརབྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
 <big>སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པ་ཁྲི་ལུ་ཕེབས་ཏེ་ སྤྱི་ལོ་ ༡༨༠༧ ཟླཝ་ ༣ པའི་ནང་ གསོལ་ཐབ་སྤུ་ན་ཁ་ལུ་ཕེབས་ཏེ་བཞུགས་པའི་དུས་ལུ་ གོང་ས་འཇིགས་མེད་སེང་གེ་མཆོག་གི་གདན་ས་ རྟ་ལོག་གསང་སྔགས་གླིང་འདི་ བླམ་ཁྲི་པ་ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་ལུ་ཕུལ་ནུག། དེའི་ལོ་ནང་ལུ་ར་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུ་རྡོ་རྗེ་གིས་ སྤ་གྲོ་པ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཏེ་ ལོ་ལངས་རུང་ཉན་མ་བཏུབ་པར་ ཐིམ་གཞུང་ལུ་ངོ་རྒོལ་འབདཝ་འབད་སར་སྡོད་ནུག། དེ་འབདཝ་ལས་བརྟེན་ རྒྱལ་ཁབ་ཀྱི་ཞི་བདེའི་དོན་ལུ་ མཁན་ཆེན་ངག་དབང་ཆོས་རྒྱལ་གྱིས་ བླམ་ཁྲི་པ་བཅུ་གཅིག་པའི་གོ་གནས་གོང་ས་འཇིགས་མེད་སེང་གེའི་ཡང་སྲིད་ཚུལ་ཁྲིམས་གྲགས་པ་གསོལ་གནང་ནུག། སྡེ་སྲིད་དབུ་མཛད་སྤ་གྲོ་པ་དང་ བོད་འགྲོལཔ་དང་པ་ཚེ་རིང་དབང་ཆེན་གྱི་ཡང་སྲིད་སྐུ་ཞབས་པདྨ་ཆོས་གྲགས་གཉིས་ སྡེ་སྲིད་མི་ངོམ་གཉིས་ཟུང་འབྲེལ་སྦེ་གསོལ་གནང་པའི་ཤུལ་ལས་ ཆོས་རྩེ་དཔོན་སློབ་ཀྱི་ངོ་རྒོལ་ཚར་གཅིག་ཞི་སོ་ནུག།<br>
-
 སྤྱི་ལོ་ ༡༨༠༧ ལུ་ མཁན་ཆེན་ཁྲི་རབས་བཅུ་དགུ་པ་ངག་དབང་ཆོས་རྒྱལ་མཆོག་ ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་པའི་མཐའ་མ་ བླམ་ཁྲི་པ་དང་ལྷན་རྒྱས་ཀྱིས་ མཁན་ཆེན་ཁྲི་རབས་ཉི་ཤུ་པའི་ཁྲི་ལུ་ ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་མངའ་གསོལ་ཞུ་གནང་ནུག།<br>
-
 སྤྱི་ལོ་ ༡༨༠༨ ཟླཝ་ ༡ པའི་ནང་སྡེ་སྲིད་གཉིས་ཀྱི་བར་ན་ཟིང་འཁྲུག་བྱུངམ་ལས་ མཁན་ཆེན་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་དང་ལྷན་རྒྱས་ཀྱིས་ སྐུ་ཞབས་པདྨ་ཆོས་གྲགས་ལུ་སྡེ་སྲིད་ཀྱི་དབང་ཚད་ཡོདཔ་སྦེ་བཟོ་གནང་སྟེ་ དབུ་མཛད་སྤ་གྲོ་པ་མཆོག་ཁྲི་ཐོག་ལས་དགོངསམ་ཞུ་བཅུག་ནུག།</big>
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་དྲུག་པ་གོང་གཟིམ་པདྨ་ཆོས་གྲགས་ཀྱི་མཛད་རྣམ། ===
+ 
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་དྲུག་པ་པདྨ་ཆོས་གྲགས་མཆོག་ འཁྲུངས་ཡུལ་བོད་ལས་ཨིནམ་ལས་ སྡེ་སྲིད་མཆོག་གི་མཚན་བོད་པ་ཆོས་གྲགས་ཟེར་ཡང་སློབ་སྲོལ་ཡོདཔ་ཨིན་མས། དཔེ་ཆ་ལ་ལུ་ཅིག་ནང་ སྡེ་སྲིད་མཆོག་སྐུ་ཡོན་མཁས་མཆོག་ཨིནམ་ལས་ བླ་མ་པདྨ་ཆོས་གྲགས་ཟེར་བཀོད་དེ་འདུག། ས་སྐྱོང་མི་དབང་གོང་གཟིམ་པདྨ་ཆོས་གྲགས་མཆོག་ འབྲུག་གི་གཏན་བཞུགས་སྐུ་ཚབ་སྦེ་མཛད་མི་འདི་གི་སྐུ་སྐྱེས་ཨིན་པས། སྡེ་སྲིད་མཆོག་ཁྲི་ཐོག་ལུ་བྱོན་པའི་ཤུལ་མ་ མཚན་ཡང་གོང་ས་ཆོས་ཀྱི་གྲགས་པ་ཟེར་ཡོངས་གྲགས་ཡར་སོ་ནུག།<br>
+སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས སྐུ་ཚེ་སྔ་མའི་གཙུག་ལག་ཁང་ཚུ་ནང་ གདན་འདྲེན་ཞུ་སྟེ་ རྟ་མགོའི་གདན་ས་ལུསྐུ་ཡོན་བཞེས་ཏེ་བཞུགས་ནུག། སྤྱི་ལོ་ ༡༨༠༧ ལུ་ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་དང་ ངག་དབང་འཇམ་དཔལ་རྒྱ་མཚོ་ མཚན་གཞན་ཚུལ་ཁྲིམས་གྲགས་པ་གཉིས་ བོད་གངས་ཅན་ལུ་གནས་གཟིགས་ལུ་བྱོན་ཞིནམ་ལས་ ལོག་འབྱོནམ་ད་ སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་མཆོག་ཡང་སྤྲུལ་སྐུ་རྣམ་པ་གཉིས་དང་གཅིག་ཁར་འབྲུག་ལུ་བྱོན་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༠༧ ལུ་གསོལ་ཐབ་ཐིམ་ཕུག་ལུ་ཕེབས་ད་ ཆོས་རྩེ་དཔོན་སློབ་ཚ་ཕུ་རྡོ་རྗེ་གིས་ སྤ་གྲོ་པ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་ལྔ་པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཏེ་ལོ་ལངས་སོ་རུང་ ཉན་མ་བཏུབ་པར་ ཐིམ་གཞུང་ལུ་ངོ་རྒོལ་འབདཝ་འབད་སར་སྡོད་ནུག། དེ་འབདཝ་ལས་བརྟེན་ རྒྱལ་ཁབ་ཀྱི་ཞི་བདེའི་དོན་ལུ་ མཁན་ཆེན་ངག་དབང་ཆོས་རྒྱལ་གྱིས་ བླམ་ཁྲི་པ་བཅུ་གཅིག་པའི་གོ་གནས་ཁར་ གོང་ས་འཇིགས་མེད་སེང་གེའི་ཡང་སྲིད་ ཚུལ་ཁྲིམས་གྲགས་པ་འདི་གསོལ་གནང་ནུག། སྡེ་སྲིད་དབུ་མཛད་སྤ་གྲོ་པ་དང་ བོད་འགྲོལཔ་དང་པ་ ཚེ་རིང་དབང་ཆེན་གྱི་ཡང་སྲིད་ སྐུ་ཞབས་པདྨ་ཆོས་གྲགས་གཉིས་ སྡེ་སྲིད་མི་ངོམ་གཉིས་ཟུང་འབྲེལ་སྦེ་གསོལ་གནང་པའི་ཤུལ་ལས་ ས་སྐྱོང་མི་དབང་པདྨ་ཆོས་གྲགས་འདི་ སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་དྲུག་པ་སྦེ་ཁྲི་མངའ་གསོལ་གནང་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༠༨ ཟླཝ་ ༡ པའི་ནང་ སྡེ་སྲིད་གཉིས་ཀྱི་བར་ན་ ནང་ཟིང་བྱུངམ་ལས་ མཁན་ཆེན་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་དང་ལྷན་རྒྱས་ཀྱིས་ སྐུ་ཞབས་པདྨ་ཆོས་གྲགས་ལུ་སྡེ་སྲིད་ཀྱི་དབང་ཚད་ཡོདཔ་སྦེ་བཟོ་གནང་སྟེ་ དབུ་མཛད་སྤ་གྲོ་པ་མཆོག་ཁྲི་ཐོག་ལས་དགོངསམ་ཞུ་བཅུག་ནུག།</big>
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྤྱི་ལོ་ ༡༨༠༨ ལུ་ ཆོས་སྐྱོང་རྒྱལ་ཆེན་གྱི་རྒྱལ་ཁང་ གསར་བཙུགས་འབད་ཡོད་མི་འདི་ གདན་ས་སྤུ་ན་ཁ་ལུ་སྦེ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་དཔལ་འཇིགས་མེད་གྲགས་པ་མཆོག་ལུ་སྡེ་སྲིད་མཆོག་གིས་ སྐུལ་མ་ཞུ་དོན་དང་འཁྲིལ་ཏེ་མཛད་གནང་ནུག། སྡེ་སྲིད་མཆོག་གི་བཀའ་དང་འཁྲིལ་ཏེ་ མཁན་ཆེན་ཁྲི་རབས་ཉེར་ལྔ་པ་ ཤེས་རབས་རྒྱལ་མཚན་གྱིས་ རྒྱལ་ཁང་གསར་བཟོ་གི་དོན་ལུ་ ལཱ་ཚུ་འགོ་འདྲེན་འཐབ་ཡོད་མི་འདི་ དཔལ་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ ཡོངས་བསྒྲུབས་ཀྱི་རབ་གནས་ཚུ་གནང་ནུག། <br>
+མཁན་ཆེན་ཁྲི་རབས་ ༡༣ པ་ རྗེ་ཡོན་ཏན་མཐའ་ཡས་མཆོག་གི་གདན་ས་ མདོ་སྡེ་བྲག་གཙུག་ལག་ཁང་གི་གསེར་ཏོག་ཆེན་པོ་ འདི་ཡང་བྲག་སྟེང་ལུ་བཀལ་ནུག། གདན་ས་བཀྲ་ཤིས་ཆོས་རྫོང་ནང་ རྒྱལ་ཆེན་སྡེ་བཞི་དང་གནས་བདག་གི་སྐུ་བརྙན་ཚུ་བཞེངས་གནང་ཡོདཔ་མ་ཚད་ དགེ་འདུན་པའི་གདན་ས་ཀུན་དགའ་ར་བ་ཡང་ ཚོན་བཏང་གནང་ནུག། <br>
+ས་སྐྱོང་མི་དབང་སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་མཆོག་གིས་ཤེས་རབ་རྒྱལ་མཚན་ལུ་ ཐིམ་ཕུག་ས་དམར་རྫིང་ཁའི་ལྷ་ཁང་འདི་བསྐྱར་བཞེངས་དང་ལེགས་བཅོས་ཀྱི་ལཱ་ཚུ་འགོ་འདྲེན་འཐབ་དགོ་པའི་བཀའ་དང་འཁྲིལ་ཏེ་ བསྒྲུབས་ཡོད་པའི་ཁར་ རབ་གནས་ཡང་མཛད་གནང་ནུག།<br>
+ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་དང་ སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་གཉིས་ཀྱི་བར་ན་ རྒྱལ་ལྟག་དྲུང་པ་བགྲེསཔ་ནོར་བུ་རིན་ཆེན་གྱིས་ཕུང་དཀྲུགས་ཏེ་ ཟིང་འཁྲུག་ལངསམ་ལས་ སྤྱི་ལོ་ ༡༨༠༨ ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་འདི་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངས་ཞུ་བཏང་ནུག།</big>
 
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
