--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -391,6 +391,22 @@
 ས་སྐྱོང་མི་དབང་སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་མཆོག་གིས་ཤེས་རབ་རྒྱལ་མཚན་ལུ་ ཐིམ་ཕུག་ས་དམར་རྫིང་ཁའི་ལྷ་ཁང་འདི་བསྐྱར་བཞེངས་དང་ལེགས་བཅོས་ཀྱི་ལཱ་ཚུ་འགོ་འདྲེན་འཐབ་དགོ་པའི་བཀའ་དང་འཁྲིལ་ཏེ་ བསྒྲུབས་ཡོད་པའི་ཁར་ རབ་གནས་ཡང་མཛད་གནང་ནུག།<br>
 ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་དང་ སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་གཉིས་ཀྱི་བར་ན་ རྒྱལ་ལྟག་དྲུང་པ་བགྲེསཔ་ནོར་བུ་རིན་ཆེན་གྱིས་ཕུང་དཀྲུགས་ཏེ་ ཟིང་འཁྲུག་ལངསམ་ལས་ སྤྱི་ལོ་ ༡༨༠༨ ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་སྡེ་སྲིད་པདྨ་ཆོས་གྲགས་འདི་སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངས་ཞུ་བཏང་ནུག།</big>
 
+ 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་བདུན་པ་ས་སྐྱོང་མི་དབང་ཚུལ་ཁྲིམས་གྲགས་པའི་མཛད་རྣམ། ===
+  
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བདུན་པ་ས་སྐྱོང་མི་དབང་ཚུལ་ཁྲིམས་གྲགས་པ་མཆོག་ སྤྱི་ལོ་ ༡༧༩༠ ལུ་སྐུ་འཁྲུངས་ཏེ་མཚན་ཡང་ཚུལ་ཁྲིམས་གྲགས་པ་ཟེར་གསོལ་ཡོདཔ་ཨིན་རུང་ སྡེ་སྲིད་མཆོག་ མཁན་ཆེན་ཁྲི་རབས་བཅོ་བརྒྱད་པ་འཇམ་དབྱངས་རྒྱལ་མཚན་ལས བསླབ་བྱ་དམ་ཚིག་དང་སྡོམ་པ་ཚུ་ཞུ་བའི་ཤུལ་མ་ མཚན་ལུ་འཇམ་དབྱངས་རྒྱ་མཚོ་ཟེར་གསོལ་གནང་ནུག། ས་སྐྱོང་མི་དབང་ཚུལ་ཁྲིམས་གྲགས་པ་མཆོག་ གོང་ས་འཇིགས་མེད་སེང་གེའི་ཡང་སྲིད་ཨིན་པའི་ཁར་ མང་སྡེ་བོན་སྦིས་ཆོས་རྗེའི་གདུང་རྒྱུད་ལུ་སྐུ་འཁྲུངས་ནུག།<br>
+སྡེ་སྲིད་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ གོང་ས་འཇིགས་མེད་སེང་གེའི་ཡང་སྲིད་ལུ་ངོས་འཛིན་གྲུབ་སྟེ་ ཁྲི་མངའ་གསོལ་ཞུ་བའི་ཤུལ་མ་ མཁན་ཆེན་འཇམ་དབྱངས་རྒྱལ་མཚན་དང་ ཡོངས་འཛིན་ངག་དབང་ཆོས་རྒྱལ། ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ། དེ་ལས་ གསུང་སྤྲུལ་གསུམ་པ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་ཚུ་ལས་ སྐུ་ཡོན་དང་སྨིན་གྲོལ་གདམས་ངག་ཚུ་གསན་གནང་ཡོདཔ་མ་ཚད་ མི་ཕམ་དབང་པོའི་ཡང་སྲིད་ པདྨ་ཆོས་གྲགས་ཀྱི་ནང་བློན་གྱི་ཕྱག་འགན་ཡང་བཞེས་གནང་ནུག། སྡེ་སྲིད་དགུང་ལོ་བཅོ་བརྒྱད་བཞེས་པའི་སྤྱི་ལོ་ ༡༨༠༧ ལོ་ལུ་ ཞབས་དྲུང་གསུང་སྤྲུལ་གསུམ་པ་ ཡེ་ཤེས་རྒྱལ་མཚན་དང་གཅིག་ཁར་བོད་ལུ་བྱོན་ནུག།  ལོག་འབྲུག་ལུ་ཕེབས་ད་ ཡང་སྲིད་པདྨ་ཆོས་གྲགས་མཆོག་ སྡེ་པའི་ཁྲི་ཐོག་ལུ་འབྱོནམ་དང་གཅིག་ཁར་ བླ་མ་ཁྲི་པ་བཅུ་གཅིག་པའི་ཁྲི་ཐོག་ལུ་བྱོན་གནང་ནུག།  <br>
+སྡེ་སྲིད་ཁྲི་རབས་ཉེར་དྲུག་པ་ པདྨ་ཆོས་གྲགས་དང་ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་གཉིས་ཀྱི་བར་ན་ མི་ངན་ཚུ་གིས་དཀྲོགས་པའི་རྐྱེན་གྱིས་ སྡེ་སྲིད་མཆོག་ དུས་མིན་རྐྱེན་ལམ་དུ་བཏང་ད་ནུག། དེ་འབདཝ་ལས་ སྤྲུལ་སྐུ་བླ་མ་ཁྲི་པ་མཆོག་ལུ་ མཁན་སློབ་འདུས་ཚོགས་དང་ ལྷན་རྒྱས་རྣམས་ཀྱིས་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ བླ་མ་ཁྲི་པའི་ཁྲི་དང་སྡེ་ཁྲི་ཟུང་འབྲེལ་སྦེ་བཞེས་གནང་ནུག།</big> 
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ། ====
+<big>སྤྲུལ་སྐུ་ཚུལ་ཁྲིམས་གྲགས་པ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལུ་བྱོན་པའི་ཤུལ་ལུ་ ཧེ་མ་ལས་བརྩམས་ཡོད་པའི་ཆོས་སྲིད་ཀྱི་ལམ་ལུགས་དང་འཁྲིལ་ དགེ་འདུན་གསོལ་ཐབ་ཀྱི་ལུགས་སྲོལ་ཅིག་ལས་འགོ་བཙུགས་ཏེ་ ཚུལ་བཞིན་མཛད་ཡོདཔ་མ་ཚད་ རྒྱལ་ཁབ་ཀྱི་ལམ་ལུགས་སྲོལ་ལུ་ཡང་ཕྱག་ཞུ་ཡོདཔ་ཨིན།</big> 
+ 
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ====
+<big>རྒྱལ་ཁབ་དང་བསྟན་འགྲོ་ལུ་ཕན་ཐོགས་པའི་སྡེ་སྲིད་མཆོག་ རྒྱལ་ཁབ་ཀྱི་དོན་ལུ་དགོཔ་ཡོད་རུང་ རྒྱལ་ཁབ་ཀྱི་ནང་འཁྲུག་ལུ་ཐུགས་བསུན་ཏེ་ སྡེ་ཁྲི་སྤངས་ཏེ་ མགོན་པ་ལུ་འབྱོན་ནིའི་ཐུགས་བསམ་བཞེས་ནི་འདི་གིས་ ལྷན་རྒྱས་དང་དགེ་འདུན་འདུས་ཚོགས་ཚུ་གིས་ ཁོ་གི་ཚབ་ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་བཀལ་ནི་སྦེ་ སྤང་དཀར་པོ་མགོན་པ་ལས་གདན་འདྲེན་ཞུ་ནུག། དེ་མ་ཚད་ སྡེ་ཁྲི་པ་ཚུལ་ཁྲིམས་གྲགས་པ་གིས་ ཞབས་དྲུང་བཞུགས་སར་བཅར་ཏེ་ སྡེ་ཁྲི་བཞེས་དགོཔ་སྦེ་ག་དེམ་ཅིག་ཞུ་རུང་ གསན་མ་བཏུབ་རུང་ ཞབས་དྲུང་མཆོག་གི་རྒྱལ་བློན་མཁན་སློབ་ཚུ་གིས་ ཆོས་སྲིད་ཀྱི་ཁྲི་མངའ་གསོལ་ གཅིག་ཁར་ཞུ་ནི་སྦེ་བཅའ་སྒྲིག་གནང་ཡོདཔ་མ་ཚད་ གནས་ཚུལ་ཡང་ཁྱབ་སོ་ནུག། ཨིན་རུང་ བཅའ་སྒྲིག་རྐྱབ་པའི་སྐབས་ལུ་ སྡེ་སྲིད་ཚུལ་ཁྲིམས་གྲགས་པའི་དར་དཔོན་གྱི་གཙོས་པའི་ནང་བློན་ཚུ་མ་ཚུདཔ་ལས་ ཁོང་གིས་ངོས་ལེན་མ་མཛདཔ་མ་ཚད་ དམག་གི་བཅའ་སྒྲིག་ཡང་རྐྱབ་ནི་འགོ་བཙུགས་ནུག། ནངས་པ་དྲོ་པ་ཟེརཝ་ད་ ཞབས་དྲུང་རིན་པོ་ཆེ་མཆོག་ གསོལ་ཇ་དང་ཉིན་མའི་གསོལཝ་བཞེས་ཚར་རུང་ གདན་འདྲེན་ཞུ་བར་ག་ཡང་མ་ལྷོདཔ་ལས་ ཐུགས་ཕམ་སྟེ་ མགོན་པ་ལུ་ལོག་འབྱོན་ནིའི་ཐུགས་ཐག་བཅད་ནུག། དེ་བསྒང་ ཞབས་དྲུང་གི་ཕྱག་ཞུ་མི་ ཞབས་དྲུང་རང་གི་ཕོ་རྒནམ་ ངག་དབང་ཕུན་ཚོགས་གིས་གཙོས་པའི་གཟིམ་སྒརཔ་བཞི་བཅུ་དང་ ཆུ་བྲག་པའི་མི་གྲངས་བཞི་བཅུ། སྤུངས་རྫོངཔ་འཁོར་བཅས་ཀྱིས་ གཞུང་དང་གཅིག་ཁར་ སྤྱི་ལོ་ ༡༨༠༧ ས་སྦྲུལ་ཟླཝ་ ༣ པའི་ཚེས་ ༡༠ གི་ཕྱི་རུ་ལས་དམག་རྐྱབ་ནི་འགོ་བཙུགས་ནུག། དམག་རྐྱབ་ད་ སྡེ་ཁྲི་པའི་དམག་ཚུ་ཕངམ་སོཔ་ལས་ སྡེ་ཁྲི་པ་བྱོག་འགྱོ་ནིའི་བྱོག་ལམ་འཚོལ་མ་ཐོབ་པར་ སྒོ་སྒྲིག་ནང་ལས་ཐོན་སོང་སྟེ་ མཁན་ཆེན་ལས་སྲོག་སྐྱབས་ཞུ་བར་ཐོན་སོ་ནུག། ཤུལ་ལས་ དགེ་འདུན་གསོལ་ཐབ་སྤུ་ན་ཁ་ལས་ ཐིམ་ཕུག་ལུ་ཕེབས་ཅིག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛདནུག།</big> 
+ 
+==== དགོངསམ་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྤྲུལ་སྐུ་ཚུལ་ཁྲིམས་གྲགས་པ་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་མ་ རྟ་མགོ་ལུ་ཐུགས་དམ་གནང་སྟེ་བཞུགས་ཡོདཔ་དང་ ཤུལ་མ་ རྗེ་ངག་དབང་ཆོས་རྒྱལ་ཞིང་ཕེབས་ཀྱི་པུར་སྦྱང་གི་ཚོགས་དབུ་དང་ ཐིམ་ཕུག་ལྷ་མོའི་ཆོ་ག་གི་ཚོགས་དབུ་སྦེ་ཞུཝ་བཞིན་དུ་ དབུ་བཞུགས་མཛད་གནང་བའི་སྤྱི་ལོ་ ༡༨༣༠ དགུང་ལོ་བཞི་བཅུ་ཞེ་གསུམ་བཞེས་པའི་ལྕགས་སྟག་ལུ་ དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག་གོ།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
