/* དགོངསམ་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -407,6 +407,23 @@
 ==== དགོངསམ་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། ====
 <big>སྤྲུལ་སྐུ་ཚུལ་ཁྲིམས་གྲགས་པ་མཆོག་ སྡེ་ཁྲི་ལས་དགོངས་ཞུ་མཛད་པའི་ཤུལ་མ་ རྟ་མགོ་ལུ་ཐུགས་དམ་གནང་སྟེ་བཞུགས་ཡོདཔ་དང་ ཤུལ་མ་ རྗེ་ངག་དབང་ཆོས་རྒྱལ་ཞིང་ཕེབས་ཀྱི་པུར་སྦྱང་གི་ཚོགས་དབུ་དང་ ཐིམ་ཕུག་ལྷ་མོའི་ཆོ་ག་གི་ཚོགས་དབུ་སྦེ་ཞུཝ་བཞིན་དུ་ དབུ་བཞུགས་མཛད་གནང་བའི་སྤྱི་ལོ་ ༡༨༣༠ དགུང་ལོ་བཞི་བཅུ་ཞེ་གསུམ་བཞེས་པའི་ལྕགས་སྟག་ལུ་ དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག་གོ།</big>
 
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་བརྒྱད་པ་ས་སྐྱོང་མི་དབང་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་གྱི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའི་མཛད་རྣམ། ====
+<big>རང་ལུགས་འདས་ལོ་ ༡༣༡ པ་རབ་བྱུང་བཅུ་གསུམ་པ་ སྤྱི་ལོ་ ༡༧༨༡ ལུ་སྐུ་འཁྲུངས་མིཞབས་དྲུང་གསུང་སྤྲུལ་གསུམ་པ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ ལྷོ་ཐིམ་ཕུག་ཝང་ཡུལ་ཁ་གསར་ལུ་སྐུ་འཁྲུངས་ཏེ་ མཚན་ལུ་ཡེ་ཤེས་རྒྱལ་མཚན་ཟེར་གསོལ་གནང་ནུག། སྡེ་སྲིད་མཆོག་ སྐུ་ན་ཆུང་ཀུའི་བསྒང་ལས་ མཁན་ཆེན་ཤེས་རབ་སེང་གེ་ལས་ བསླབ་ཚིགས་སྔ་མ་གཉིས་དང་ སྨིན་གྲོལ་གྱི་གདམས་ངག་ཚུ་གསན། ལྷག་པར་དུ་ ཁོ་རའི་རྩ་བའི་བླ་མ་འཇམ་དབྱངས་རྒྱལ་མཚན་ལས་ བསླབ་ཚིགས་ཕྱི་མ་གི་གཙོས་མདོ་སྔགས་ཀྱི་གཞུང་ཚུ་ཡང་སྦྱང་བ་མཛད་གནང་ནུག།   <br>
+སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བརྒྱད་པ་ ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ སྤྱི་ལོ་ ༡༧༩༦ ལས་ སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་གཅིག་པ་འབྲུག་རྣམ་རྒྱལ་གྱིས་དབུ་བླར་བཟུང་སྟེ་ སྦྱིན་བདག་མཛད་དེ་བཞུགས་ནུག། དེ་མ་ཚད་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བདུན་པ་ ས་སྐྱོང་མི་དབང་ཚུལ་ཁྲིམས་གྲགས་པ་དང་ ཇོ་ཤཱཀྱ་རྣམ་གཉིས་དང་མཉམ་གཅིག་ བོད་གངས་ཅན་གྱི་རྟེན་དང་གནས་ཁྱད་པར་ཅན་ཚུ་གཟིགས་པར་བྱོན་ཏེ་ བསྟན་འགྲོའི་དོན་ལུ་བྱང་ཆུབ་ཀྱི་སེམས་བསྐྱེད་དེ་ ཐུགས་སྨོན་གནང་ནུག།<br>
+ས་སྐྱོང་མི་དབང་ཁྲི་རིན་པོ་ཆེ་ཚུལ་ཁྲིམས་གྲགས་པ་དང་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་ལྔ་པ་དབུ་མཛད་སྤ་གྲོ་པ་དང་ སྡེ་སྲིད་རབས་ཉེར་དྲུག་པ་གོང་གཟིམ་པདྨ་ཆོས་གྲགས་དང་ལྷན་རྒྱས་ཚུ་གིས་ མཁན་ཆེན་ངག་དབང་ཆོས་རྒྱལ་མཆོག་ མཁན་ཁྲི་ལས་དགོངས་ཞུ་མཛད་གནངམ་ལས་ ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ མཁན་ཆེན་ཁྲི་རབས་ཉི་ཤུ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༠༩ ལུ་ བླམ་ཁྲི་པ་དང་ཁྲི་རིན་པོ་ཆེ་ཚུལ་ཁྲིམས་གྲགས་པ་དང་ གཞུང་ལྷན་རྒྱས་ཚུ་གིས་ ཆོས་སྲིད་ཟུང་འབྲེལ་གྱི་ཁྲི་ལུ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་དང་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་ མངའ་གསོལ་ནི་འབདཝ་ད་ ཁྲི་རིན་པོ་ཆེའི་ནང་བློན་ཚུ་གིས་གསན་མ་བཏུབ་པར་ནང་ཟིང་བྱུང་ནུག། འདི་གིས་སྦེ་ ས་སྐྱོང་མི་དབང་ཚུལ་ཁྲིམས་གྲགས་པ་མཆོག་གི་ཚེ་སྲོག་ལུ་ ཉེན་འཚུབ་ཐུགཔ་ད་ མཁན་ཆེན་ཡེ་ཤེས་རྒྱལ་མཚན་གྱིས་ཉེན་སྐྱོབ་མཛད་གནང་ནུག། ཡུན་མ་རིང་ཅིག་ཁར་ ཁྲི་རིན་པོ་ཆེ་ཚུལ་ཁྲིམས་གྲགས་པ་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངསམ་ཞུ་ནུག། <br>
+སྤྱི་ལོ་ ༡༨༠༩ ལུ་ ཐིམ་ཕུག་རྫོང་དཔོན་དང་ས་པ་དང་ སྤ་གྲོ་སྤྱི་བླ་སྟོད་ཅུང་པ། དར་དཀར་སྤྱི་བླ་དཔྲལ་བ། ཀྲོང་གསར་སྤྱི་བླ་ཚ་ཕུག་རྡོ་རྗེ་ཚུ་གིས་ མཁན་ཆེན་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་བདུན་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ། ====
+<big>མཁན་ཆེན་ཁྲི་རབས་ཉི་ཤུ་པ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བདུན་པ་སྦེ་མངའ་གསོལ་མཛད་པའི་ཤུལ་མ་ རྗེ་འཇམ་དཔལ་གྲགས་པ་ མཁན་ཆེན་ཁྲི་རབས་ཉི་ཤུ་རྩ་གཅིག་པ་སྦེ་བསྐོ་བཞག་གནང་ནུག། སྤྱི་ལོ་ ༡༨༠༩ ལུ་ སྡེ་སྲིད་ཟུང་འབྲེལ་གྱི་ཁྲི་ལུ་བརྟེན་ ནང་འཁྲུག་ལངས་ཡོད་མི་འདི་མ་ཆདཔ་ལས་ བྱམས་མགོན་ངག་དབང་འཇམ་དཔལ་ཡེ་ཤེས་རྡོ་རྗེ་དང་ རྗེ་ཁྲི་པ་འཇམ་དཔལ་གྲགས་པ་དང་ རྗེ་ཁྲི་ཟུར་ངག་དབང་ཆོས་རྒྱལ་གསུམ་ཁ་འཆམས་ཏེ་ ཁྲི་འདུམ་མཛད་གནང་ནུག།<br>
+སྡེ་སྲིད་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ལུ་ སྤུངས་རྫོང་པ་གིས་ངོ་ལོག་སྟེ་ ཚུལ་མིན་གྱིས་ལཱ་ལེ་ཤ་འབདཝ་ལས་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་དང་ མཁན་ཁྲི་འཇམ་དཔལ་གྲགས་པ་རྣམ་གཉིས་ཀྱིས་ གསུང་གྲོས་གནངམ་བཞིན་དུ་ སྤུངས་རྫོང་པ་འདི་དགོངས་ཞུ་བཏང་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ། ==== 
+<big>སྤྱི་ལོ་ ༡༨༡༡ ཟླཝ་ ༤ པའི་ནང་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བརྒྱད་པ་ཕྱོགས་ལས་ངག་དབང་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ལས་དགོངས་ཞུ་མཛད་དེ་ སྤ་གྲོ་གསང་ཆེན་ཆོས་འཁོར་ལུ་གདན་ས་བཟུང་སྟེ་བཞུགས་ནུག།</big>
+==== དགོངསམ་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>ཞབས་དྲུང་གསུང་སྤྲུལ་ཕྱོགས་ལས་རིམ་བྱོན་གྱི་མིང་གཏམ་ བོད་དང་རྒྱ་ནག་ཕྱོགས་ལུ་ཡོངས་གྲགས་ཡར་སོ་ནུག། རྒྱ་ནག་རྒྱལ་པོ་གིས་གདན་འདྲེན་ཞུ་སྟེ་ རྩ་བའི་བླམ་སྦེ་བསྟེན་ཏེ་ ཆོས་གསན་ཞིནམ་ལས་ འབུལ་ཆེན་ཚུ་ཡང་ཕུལ་ནུག། ད་རེས་ནངས་པ་ གདན་ས་གསང་ཆེན་ཆོས་འཁོར་ལུ་ གསེར་གྱི་གླེགས་བམ་དང་ སངས་རྒྱས་རབ་བདུན་གྱི་མཐོང་གྲོལ་ཚུ་མཇལ་ནི་ཡོདཔ་ཨིན།
+དེ་བསྒང་ ཞབས་དྲུང་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་གིས་ ཤིང་འབྲས་ཨན་འབྲས་ཀྱི་སོན་ རྒྱ་ནག་ལས་ འབྲུག་ལུ་བསྣམས་བྱོན་ནུག།<br>
+ཞབས་དྲུང་མཆོག་འབྲུག་ལུ་ལོག་བྱོན་ཞིནམ་ལས་ གསང་ཆེན་ཆོས་འཁོར་ལུ་ཐུགས་དམ་གནང་བཞུགས་ཏེ་ ཁོ་རའི་སློབ་མ་ཚུ་ལུ་ཆོས་འཁོར་ཚུ་བསྐོར་གནང་ནུག། སྤྱི་ལོ་ ༡༨༣༠ ཟླཝ་ ༩ པའི་ཚེས་ ༢༢ ལུ་དགུང་ལོ་ ༥༠ བཞེས་པའི་མཐའ་མ་དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
