/* དགོངསམ་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། */

--- a/སྡེ་སྲིད་རིན་བྱོན།.mw
+++ b/སྡེ་སྲིད་རིན་བྱོན།.mw
@@ -424,6 +424,19 @@
 དེ་བསྒང་ ཞབས་དྲུང་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་གིས་ ཤིང་འབྲས་ཨན་འབྲས་ཀྱི་སོན་ རྒྱ་ནག་ལས་ འབྲུག་ལུ་བསྣམས་བྱོན་ནུག།<br>
 ཞབས་དྲུང་མཆོག་འབྲུག་ལུ་ལོག་བྱོན་ཞིནམ་ལས་ གསང་ཆེན་ཆོས་འཁོར་ལུ་ཐུགས་དམ་གནང་བཞུགས་ཏེ་ ཁོ་རའི་སློབ་མ་ཚུ་ལུ་ཆོས་འཁོར་ཚུ་བསྐོར་གནང་ནུག། སྤྱི་ལོ་ ༡༨༣༠ ཟླཝ་ ༩ པའི་ཚེས་ ༢༢ ལུ་དགུང་ལོ་ ༥༠ བཞེས་པའི་མཐའ་མ་དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག།</big>
 
+
+=== སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་རྩ་དགུ་པ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པའི་མཛད་རྣམ། ===
+==== སྡེ་སྲིད་ཀྱི་ཁྲི་ཁར་མ་བྱོན་པའི་ཧེ་མའིམཛད་རྣམ། ====
+<big>ས་སྐྱོང་མི་དབང་ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པ་མཆོག་ སྤྱི་ལོ་ ༡༧༩༡ ཟླ་ ༤ པའི་ཚེས་ ༡༥ རང་ལུགས་འདས་ལོ་ ༡༤༡ པ་རབ་བྱུང་བཅུ་གསུམ་པའི་ནང་ ཤར་ཕྱོགས་ཝེང་མཁར་ལུ་སྐུ་འཁྲུངས་ནུག། སྡེ་སྲིད་མཆོག་ དགུང་ལོ་གསུམ་དེ་ཅིག་ལས་ར་ ཞབས་དྲུང་རིན་པོ་ཆེའི་སྐུ་སྐྱེས་སྦེ་ངོས་འཛིན་གྲུབ་མི་ལུ་བརྟེན་ སྤྱི་ལོ་ ༡༧༩༤ ལུ་སྡེ་སྲིད་ཁྲི་རབས་ཉི་ཤུ་པ་ བསོད་ནམས་རྒྱལ་མཚན་གྱིས་འགོ་འདྲེན་འཐབ་ཐོག་ལས་ གདན་ས་བཀྲ་ཤིས་ཆོས་རྫོང་ལུ་གདན་འདྲེན་ཞུ་ནུག།<br>
+སྤྱི་ལོ་ ༡༧༩༥ ལུ་ཞབས་དྲུང་ཐུགས་སྤྲུལ་གསུམ་པ་འཇིགས་མེད་གྲགས་པའི་རྒྱལ་ཚབ་ བླ་མ་ཁྲི་པ་བཅུ་པའི་ཁྲི་ཁར་མངའ་གསོལ་ཞུ་ནུག། དེ་ལས་ མཁན་ཆེན་ཁྲི་རབས་བཅོ་བརྒྱད་པ་འཇམ་དབྱངས་རྒྱལ་མཚན་དང་ ཡོངས་འཛིན་མཁན་ཆེན་ཁྲི་རབས་ཉེར་གཉིས་པ་འཇིགས་མེད་རྒྱལ་མཚན་ལས་ རིམ་པ་བཞིན་དུ་ གདམས་ངག་ཡོངས་རྫོགས་གསན་ཏེ་ མཁས་གྲུབ་ཀྱི་གོ་གནས་བཞེས་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༠༧ ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བཞི་པ་དབུ་མཛད་སྤ་སྒྲོ་པ་གིས་ ཉམས་གསོ་དང་རྒྱ་སྐྱེད་མཛད་གནང་ཡོད་མི་གཙུག་ལག་ཁང་ རྟ་ལོག་གསང་སྔགས་ཆོས་གླིང་ གོང་ས་འཇིགས་མེད་སེང་གེ་གི་གདན་ས་འདི་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་རིམ་བྱོན་ཚུ་གི་གདན་ས་ལུ་གྱུར་ནུག། དེ་མ་ཚད་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་ལྔ་པ་པདྨ་ཆོས་གྲགས་མཆོག་གིས་ཞུ་བ་ཕུལཝ་བཞིན་དུ་ རྒྱལ་ཁང་གསརཔ་གཞི་བཙུགས་གནང་ནུག། སྤྱི་ལོ་ ༡༨༠༩ ལུ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་ དགུང་ལོ་ ༡༨ བཞེས་པའི་སྐབས་ དགུང་སྐག་ཕོགཔ་ལས་ རྐྱེན་ཟློག་ཐབས་ལུ་ དབེན་སྤང་དཀར་པོ་ལུ་ ཐུགས་དམ་རིམ་པ་གཉིས་ལུ་བརྩོན་ཏེ་བཞུགས་ནུག།<br>
+སྤྱི་ལོ་ ༡༨༠༩ ལུ་ཁྲི་རིན་པོ་ཆེ་ཚུལ་ཁྲིམས་གྲགས་པ་དང་ མཁན་ཆེན་ཡེ་ཤེས་རྒྱལ་མཚན། དེ་ལས་ གཞུང་ལྷན་རྒྱས་ཚོགས་ཀྱིས་ ཟླཝ་ ༣ པའི་ཚེས་ ༣ ལུ་སྤུ་ན་ཁ་ལུ་གདན་འདྲེན་ཞུ་སྟེ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་ ཆོས་སྲིད་ཟུང་འབྲེལ་གྱི་འགན་ཁག་བཞེས་དགོཔ་སྦེ་ཞུ་བ་ཕུལ་ཡོདཔ་དང་ དེ་གི་ནངས་པ་ ཁྲི་མངའ་གསོལ་ཞུ་ནིའི་དོན་ལུ་ཁྱབ་བསྒྲགས་གནང་ནུག། ཨིན་རུང་ དེ་གི་སྐོར་ལས་ ཁྲི་རིན་པོ་ཆེའི་ནང་བློན་ཚུ་དང་གཅིག་ཁར་ བསྟུན་གྲོས་མ་འབདཝ་ལས་བརྟེན་ ཉན་མ་བཏུབ་པར་ རྟེན་འབྲེལ་གྱི་ལས་རིམ་ཆ་མེད་བཏང་ཡོདཔ་ལས་ ཟླཝ་ ༣ པའི་ཚེས་ ༡༠ ལུ་ཞབས་དྲུང་གི་ཕྱག་ཞུ་མི་ཚུ་གིས་ ནང་འཁྲུག་འགོ་བཙུགས་ནུག། ནང་འཁྲུག་འབྱུང་པའི་སྐབས་ ཁྲི་རིན་པོ་ཆེའི་ཕྱོགས་ཀྱིས་ ཞབས་དྲུང་གི་ཕྱག་ཞུ་མི་ཚུ་ ཕམ་མ་ཚུགས་པར་ མཁན་ཆེན་མཆོག་ལུ་སྲོག་སྐྱབས་ཞུ་དགོཔ་ཐོན་སོ་ནུག།<br>
+ཐིམ་ཕུགཔ་དང་ དར་དཀར་དཔོན་སློབ། སྤ་གྲོ་དཔོན་སློབ། ཀྲོང་གསར་དཔོན་སློབ་ཚུ་ཁ་འཆམས་ཏེ་ མཁན་ཆེན་ཁྲི་རབས་ཉི་ཤུ་པ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་བརྒྱད་པའི་ཁྲི་ཁར་མངའ་གསོལ་ཞུ་ཡོད་རུང་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པའི་ཕྱོགས་ལས་ དབང་འདུས་རྫོང་དཔོན་དང་ སྤུ་ན་ཁ་རྫོང་དཔོན་ཚུ་གིས་དམག་འཁྲུག་ལོངས་ཏེ་ སེམས་རྟོགས་ཁ་རྫོང་ཐོབ་ཆི་ནུག། ཟླཝ་ ༧ པའི་ནང་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་ གསོལ་ཐབ་སེམས་རྟོགས་ཁ་ལུ་བྱོན་སོ་ནུག། ཟླཝ་ ༡༠ པའི་ནང་ དམག་འདི་ཐག་ཆོད་མ་ཚུགས་པར་ མི་མང་གི་འགོ་དཔོན་དང་ སྤྱི་དཔོན་ཚུ་གིས་ མི་མང་གི་ཚེ་སྲོག་ལུ་ཉན་ཁ་སྦོམ་བྱུང་ཡོདཔ་ལས་བརྟེན་ ཁྲི་འདུམ་མཛད་གནང་དགོ་པའི་ཞུ་བ་ མཁན་ཆེན་ཁྲི་པ་འཇམ་དཔལ་གྲགས་པ་དང་ མཁན་ཆེན་སྐུ་བགྲེས་ཡེ་ཤེས་རྒྱལ་མཚན། དེ་ལས་ མཁན་ཆེན་ངག་དབང་ཆོས་རྒྱལ་གསུམ་ལུ་ཕུལ་ནུག། སྤྱི་ལོ་ ༡༨༡༠ ལུ་མཁན་ཆེན་རྣམ་པ་གསུམ་གྱིས་ གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་དང ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་གཉིས་ སྡེ་སྲིད་ཟུང་འབྲེལ་མཛད་དགོཔ་སྦེ་ཆིངས་འགྲིག་གནང་སྟེ་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་ སྡེ་སྲིད་ཁྲི་རབས་ཉེར་དགུ་པའི་ཁྲི་ལུ་མངའ་གསོལ་ཞུ་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་རྣམ། ====
+<big>སྤྱི་ལོ་ ༡༨༡༠ པའི་ནང་ གནམ་དགུན་ལུ་ སྡེ་སྲིད་ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་དང་ གསུང་སྤྲུལ་ཕྱོགས་ལས་ཡེ་ཤེས་རྒྱལ་མཚན་གཉིས་ ཐུགས་མཐུན་པའི་ཐོག་ལས་ མཛད་སྒོ་ཚུ་ཚུལ་བཞིན་མཛད་གནང་ནུག།</big>
+==== སྡེ་སྲིད་མཆོག་གི་མཛད་པ་མཐའ་མ་དང་ དགོངས་ཞུ་བའི་ཤུལ་གྱི་མཛད་རྣམ། ====
+<big>སྤྱི་ལོ་ ༡༨༡༠ ཟླཝ་ ༤ པའི་ནང་ སྡེ་སྲིད་ཞབས་དྲུང་ཐུགས་སྤྲུལ་འཇིགས་མེད་གྲགས་པ་མཆོག་ དགུང་ལོ་ཉེར་གཉིས་བཞེསཔ་ད་ རང་གི་མོས་པའི་ཐོག་ལས་ སྡེ་སྲིད་ཀྱི་ཁྲི་ལས་དགོངས་ཞུ་མཛད་ནུག། དགོངས་ཞུ་མཛད་པའི་ཤུལ་ལུ་ སེམས་རྟོགས་ཁ་ལུ་བཞུགས་ཏེ་ ཡོངས་འཛིན་འཇམ་དབྱངས་རྒྱལ་མཚན་གྱི་རྣམ་ཐར་ གསར་རྩམ་མཛད་ནུག། སྤུངས་རྫོང་པ་དཔལ་འབར་གྱིས་ ལཱ་ངན་མང་རབས་ཅིག་འབདཝ་ལས་ ཞབས་དྲུང་མཆོག་གིས་ སྤུངས་རྫོང་པའི་གོ་གནས་ལས་དགོངསམ་ཞུ་བཅུག་ནུག། རྗེ་འཇམ་དཔལ་གྲགས་པ་མཆོག་ མཁན་ཁྲི་ཉེར་གཅིག་པ་ལས་དགོངས་ཞུ་མཛད་དེ་ མཁན་ཁྲི་ཉེར་གཉིས་པ་འཇིགས་མེད་རྒྱལ་མཚན་འདི་ ཁྲི་མངའ་གསོལ་མ་ཞུ་ཚུན་ཚོད་ ཞབས་དྲུང་འཇིགས་མེད་གྲགས་པ་མཆོག་གིས་ མཁན་ཆེན་གྱི་ཕྱག་འགན་བཞེས་ཏེ་བཞུགས་ནུག། རྟ་ལོག་གཙུག་ལག་ཁང་ ཞབས་དྲུང་གི་མཐོང་གྲོལ་མཇལ་ཁ་གནང་ནིའི་དོན་ལུ་བཞེངས་ཡོདཔ་དང་ གྲུབ་ཆུ་ཡང་བཏོན་ནུག་ དེ་ལས་ མཐོང་གྲོལ་ཁྱད་དུ་འཕགས་པ་མང་རབས་ཅིག་བཞེངས་གནང་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༨༣༠ ཟླཝ་ ༨ པའི་ཚེས་ ༣༠ ལུ་ ཞབས་དྲུང་ཐུགས་སྤྲུལ་འཇིགས་མེད་གྲགས་པ་མཆོག་ དགོང་ལོ་ ༤༠ བཞེསཔ་ད་ དགོངས་པ་ཆོས་ཀྱི་དབྱིངས་ལུ་ཐིམ་སོ་ནུག་གོ།</big>
+
 === ཁུངས་གཏུག། ===
 # སངས་རྒྱས་རྡོ་རྗེ། (༢༠༡༧) འབྲུག་གི་སྡེ་སྲིད་ཁྲི་རབས་རིམ་བྱོན་གྱི་མཛད་རྣམ་དེབ་ཐེར་དཔྱོད་ལྡན་དགྱེས་པའི་དོ་ཤལ།
 # དགེ་འདུན་རིན་ཆེན། (༢༠༡༧) དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཀྱི་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན་ཞེས་བྱ་བ་བཞུགས་སོ།
